2004-04-27  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (get_dtstart): use the recurrence-ID if available.

2004-04-27  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.h: added 'instance_start' and 'instance_end' fields
	to ECalModelComponent, so that we can keep the start and end times of
	instances.

	* gui/e-cal-model.c (add_instance_to_model): set the start and end
	fields. Set the recurrence ID on the instance if its not set.

	* gui/e-day-view.c (e_day_view_add_event): no need anymore to set the
	recurrence ID here, it should be set in the model.
	(process_component): dont expand recurrences here.

	* gui/e-week-view.c (e_week_view_add_event, process_component): same
	as e-day-week.c.

2004-04-26  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_view_objects_added_cb):
	expand recurrences here.
	(free_comp_data): removed, since there's already
	e_cal_model_free_component_data, which unrefs correctly the
	client.
	(clear_objects_array, e_cal_view_objects_removed_cb, remove_client):
	use e_cal_model_free_component_data.
	(e_cal_model_set_default_client): fixed warnings.
	
2004-04-25  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c (e_day_view_add_event):
	* gui/e-week-view.c (e_week_view_add_event): set the recurrence ID.

2004-04-23  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-calendar-view.c (e_calendar_view_delete_selected_occurrence):
	use the correct start time to get the recurrence-ID.

2004-04-23  Rodney Dawes  <dobey@ximian.com>

	* gui/alarm-notify/notify-main.c (main): Call e_icon_factory_init ()

	Fixes #57497

2004-04-22  Jeffrey Stedfast  <fejj@ximian.com>

	* conduits/calendar/calendar-conduit.c (start_calendar_server):
	Use e_cal_open_default() instead of e_cal_open().
	(map_name): Changed the path for the pilot map filename.
	(pre_sync): Changed the query to "#t" instead of "(#t)" and
	removed a duplicate block of code (seems to have been a paste-o?).
